# highlightrs

./: Cargo.toml  README.md  html_highlighter  test.html
src/: html_highlighter.rs  main.rs
